@@ -1,3 +1,7 @@
+2005-08-20  Kai Vehmanen  <kaiv@.devtag.AUTHORS>
+
+	* midi-server.h: Added MIDI_SERVER::set_schedrealtime().
+
 2005-08-19  Pedro Lopez-Cabanillas  <pedrolc@.devtag.AUTHORS>
 
 	* midiio-aseq.h: Added.
